<resources>
    <!-- tela inicio -->
    <string name="app_name">Dose Certa</string>
    <string name="nomeInicio">Dose Certa</string>
    <string name="btEntrar">Entrar</string>
    <string name="btSair">Sair</string>
    <string name="senha">Senha</string>
    <string name="esqueciSenha">Recuperar Senha</string>
    <string name="cadastrar">Cadastre-se</string>

    <!-- Tela dos remedios -->
    <string name="titulo1">Meus Remédios</string>
    <string name="buscar">Buscar</string>
    <string name="dorEFebre">Dor e Febre</string>
    <string name="gripeEtosse">Gripe e Tosse</string>
    <string name="Alergia">Alergia</string>
    <string name="Antibióticos">Antibióticos</string>

    <!-- Cadastro -->
    <string name="cadastro">CADASTRO</string>
    <string name="dgtNome">Digite seu nome completo:</string>
    <string name="nome">Nome completo</string>
    <string name="cpf">Digite seu CPF:</string>
    <string name="dicaCpf">CPF</string>
    <string name="email">Digite seu e-mail:</string>
    <string name="dicaEmail">E-mail</string>
    <string name="dgtSenha">Digite sua senha:</string>
    <string name="dgtConfirmSenha">Confirme sua senha:</string>
    <string name="dicaSenha">Senha</string>
    <string name="salvar">Salvar</string>

    <!-- Recuperar Senha -->
    <string name="recSenha">Recuperar Senha</string>
    <string name="novaSenha">Digite sua nova senha:</string>
    <string name="dicaNovaSenha">Nova senha</string>
    <string name="confirmeNovaSenha">Confirme sua nova senha:</string>
    <string name="dicaConfirmeNovaSenha">Nova senha</string>
    <string name="bula">Bula</string>
</resources>