<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Recuperar">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dose_certa"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recSenha"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novaSenha"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="30sp">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/dicaNovaSenha"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="30sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmeNovaSenha"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="30sp">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/dicaConfirmeNovaSenha"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_bg">
    </EditText>

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textSize="20sp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:backgroundTint="@color/blue"
        >
    </Button>



</LinearLayout>