<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dose_certa" />

    <EditText
        android:id="@+id/lgCpf"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/dicaCpf"
        android:autofillHints="username"
        android:inputType="number"
        android:background="@drawable/edittext_bg" />

    <EditText
        android:id="@+id/lgSenha"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/senha"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg" />

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btEntrar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btSair"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/linkEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="150dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/esqueciSenha"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/linkCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="167dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cadastrar"
        android:textColor="@color/blue"
        android:textSize="14sp" />

</LinearLayout>