<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaHomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/titulo1"
        android:textSize="30sp" />

    <EditText
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:hint="@string/buscar"
        android:autofillHints="name"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/opc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:src="@drawable/dorflex" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/edittext_bg"
                    android:text="@string/dorEFebre"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:src="@drawable/cimegripe" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/edittext_bg"
                    android:text="@string/gripeEtosse"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:src="@drawable/allegra" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/edittext_bg"
                    android:text="@string/Alergia"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:src="@drawable/azitromicina" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/edittext_bg"
                    android:text="@string/Antibióticos"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:background="@color/cardview_light_background">

        <ImageView
            android:id="@+id/btCasa"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/casa" />

        <ImageView
            android:id="@+id/btAdicionar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/mais" />

        <ImageView
            android:id="@+id/btNotificacao"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/sino" />

    </LinearLayout>



</LinearLayout>